--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,5 +1,5 @@
 .banner-image {
-    background-image: url("https://media.istockphoto.com/photos/travel-during-the-covid19-pandemic-airplane-model-with-face-mask-and-picture-id1268257924?b=1&k=20&m=1268257924&s=170667a&w=0&h=kviE-Bd4sAaGuHXJqdzxk__-URPKAZV6Zj7VpnuXges=");
+    background-image: url("https://image.freepik.com/free-photo/beautiful-girl-standing-viewpoint-koh-nangyuan-island-near-koh-tao-island-surat-thani-thailand_335224-1094.jpg");
     height: 70vh;
     width: 100%;
     background-position: center;
